# tg_bot_konkurs

./: .env.example  LICENSE  README.md  pyproject.toml
src/: config.py  database.py  main.py
