[project]
name = "telegram-contest-bot"
version = "1.0.0"
description = "Асинхронный Telegram-бот для проверки подписки на канал и регистрации участников конкурса"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

# Основные зависимости для работы бота
dependencies = [
    "aiogram>=3.15.0",
    "pydantic-settings>=2.6.0",
    "aiosqlite>=0.20.0",
]

# Зависимости для разработки (линтеры, тесты, форматирование)
[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",          # Молниеносный линтер и форматтер (тоже от Astral)
    "mypy>=1.13.0",         # Статическая проверка типов
    "pytest>=8.3.0",        # Фреймворк для тестов
    "pytest-asyncio>=0.24.0", # Поддержка асинхронности в pytest
]

# Удобные команды для запуска через uv run
[project.scripts]
start = "src.main:main"
format = "ruff format src"
lint = "ruff check src"
typecheck = "mypy src"

# Настройки инструмента Ruff (стандарт качества кода)
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (сортировка импортов)
    "UP",  # pyupgrade (использование современных фич Python)
    "RUF", # Специфичные правила Ruff
]

# Настройки Mypy (проверка типов)
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = false

# Настройки самого uv
[tool.uv]
# Указываем, что мы используем группу dev-зависимостей по умолчанию при разработке
dev-dependencies = ["ruff>=0.8.0", "mypy>=1.13.0", "pytest>=8.3.0", "pytest-asyncio>=0.24.0"]
